[tool.poetry]
name = "intro"
version = "0.1.0"
description = ""
authors = ["dcbuilder.eth <dcbuilder@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
unicorn = "^1.0.3"
pwntools-r2 = "^1.3.3"
pycryptodome-test-vectors = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
